--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,9 +9,10 @@
   width: 100%;
 }
 .content{
-  transition: .3s all;
-  height: 300px;
-  width: 544px;
+  transition: .5s transform;
+  height: 400px;
+  width: 680px;
+  transition-timing-function:cubic-bezier(.88,-0.68,.17,1.48);
   /* display: flex;
   flex-direction: column;
   justify-content: center; */
@@ -20,13 +21,14 @@
   transform: translateY(100%);
 }
 .wrapperContent{
-  height: 200px;
+  height: 230px;
   overflow: hidden;
   position: absolute;
-  bottom: 64px;
+  bottom: 50px;
   left: 120px;
   z-index: 2;
 }
+
 .wrapperContent.down{
   transform: translateY(100%);
 }
@@ -38,4 +40,72 @@
 .content p{
   font-size: 26px;
   font-weight: 500;
+}
+.button{
+  height: 53px;
+  width: 188px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 2px solid #FFFFFF;
+  box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  color: #FFFFFF;
+  font-family: Electrofied;
+  font-size: 20px;
+  transition: .3s all;
+  position: absolute;
+  right: 120px;
+  top:40px;
+  z-index: 2;
+}
+.button:hover{
+  background-color: #FF6D24;
+  box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.5);
+  border-color: #FF6D24;
+}
+.logo{
+  width: 225.5px;
+  height: 48px;
+  position: absolute;
+  z-index: 2;
+  margin-top: 40px;
+  margin-left: 120px;
+}
+@media only screen and (max-width: 1200px) {
+  .wrapperContent{
+    bottom: 150px;
+    left: 60px;
+  }
+  .content{
+    width: 100%;
+    /* height: 500px; */
+  }
+  .content h1{
+    font-size: 50px;
+  }
+}
+@media only screen and (max-width: 700px) {
+.content{
+  height: 230px;
+}
+  .content h1{
+    font-size: 50px;
+  }
+  .content p{
+    font-size: 14px;
+  }
+  .logo{
+    /* width: 225.5px; */
+    height: 30px;
+    width: auto;
+    object-fit: cover;
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+  .button{
+    width: 100px;
+    font-size: 14px;
+    height: 40px;
+    right: 30px;
+    top: 30px;
+  }
 }
