--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;400;500;600&display=swap');
+@font-face {
+	font-family: Electrofied;
+	font-weight: 700;
+	src: url('../public/fonts/Electrofied Bold.ttf');
+	font-display: swap;
+}
+
 #app { height: 100% }
 html,
 body {
@@ -82,4 +89,14 @@ body {
   height: fit-content;
   width: fit-content !important;
   transform: translateX( calc(-100% - 120px));
+}
+@media only screen and (max-width: 700px) {
+  .swiper-pagination-bullet{
+    margin-left: 6px !important;
+    
+  }
+  .mySwiper .swiper-pagination{
+    margin-left: 120px;
+    width: 100% !important;
+  }
 }
