--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 @font-face {
 	font-family: Electrofied;
 	font-weight: 300;
-	src: local('Electrofied Bold'),
+	src: local('Electrofied Regular'),
 		url('../public/fonts/Electrofied\ Regular.ttf') format('truetype');
 }
 #app { height: 100% }
@@ -21,13 +21,13 @@ body {
 
 body {
   background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
   margin: 0;
   padding: 0;
   color: #fff;
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Be Vietnam Pro', -apple-system, BlinkMacSystemFont, Segoe UI,
+		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
 }
 *{
   margin: 0;
