fix bug font not use in production

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,13 @@
 	font-family: Electrofied;
 	font-weight: 700;
 	src: local('Electrofied Bold'),
-		url('../public/fonts/Electrofied\ Bold.ttf') format('truetype');
+		url('../public/fonts/ElectrofiedBold.ttf') format('truetype');
 }
 @font-face {
 	font-family: Electrofied;
 	font-weight: 300;
 	src: local('Electrofied Regular'),
-		url('../public/fonts/Electrofied\ Regular.ttf') format('truetype');
+		url('../public/fonts/ElectrofiedRegular.ttf') format('truetype');
 }
 #app { height: 100% }
 html,
