--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,3 +110,9 @@ body {
   position: absolute;
   inset: 0;
 }
+.Toastify__toast-body{
+  font-family: 'Be Vietnam Pro', -apple-system, BlinkMacSystemFont, Segoe UI,
+		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
+    font-weight: 700;
+    font-size: 20px;
+}
