add video slide

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,6 +109,7 @@ body {
 .absolute{
   position: absolute;
   inset: 0;
+  width: 100%;
 }
 .Toastify__toast-body{
   font-family: 'Be Vietnam Pro', -apple-system, BlinkMacSystemFont, Segoe UI,
