--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -32,6 +32,7 @@
     right: 50px;
     top: 50%;
     transform: translateY(-50%);
+    display: none;
   }
 }
 
@@ -62,6 +63,9 @@
   right: 120px;
   top:40px;
   z-index: 2;
+   @media only screen and (max-width: 700px) {
+     display: none;
+   }
 }
 .button:hover{
   background-color: #FF6D24;
