--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -119,3 +119,24 @@ body {
     font-weight: 700;
     font-size: 20px;
 }
+.mobile{
+  display: none;
+  @media only screen and (max-width: 700px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 0 50px;
+     background-color: #5A6178;
+  }
+}
+.mySwiper{
+  @media only screen and (max-width: 700px) {
+    // display: none;
+    
+    background-color: #5A6178;
+    .swiper-wrapper{
+      display: none;
+    }
+  }
+}
