--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -32,8 +32,8 @@
     right: 50px;
     top: 50%;
     transform: translateY(-50%);
-    display: none;
   }
+  
 }
 
 .wrapperContent.down{
@@ -63,9 +63,6 @@
   right: 120px;
   top:40px;
   z-index: 2;
-   @media only screen and (max-width: 700px) {
-     display: none;
-   }
 }
 .button:hover{
   background-color: #FF6D24;
@@ -118,5 +115,14 @@
     height: 40px;
     right: 30px;
     top: 30px;
+  }
+}
+.main{
+  width: 100%;
+  height: 100%;
+  
+  
+  @media only screen and (max-width: 700px) {
+    display: none;
   }
 }
