--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -95,6 +95,7 @@ body {
   height: fit-content;
   width: fit-content !important;
   transform: translateX( calc(-100% - 120px));
+  z-index: 2;
 }
 @media only screen and (max-width: 700px) {
   .swiper-pagination-bullet{
@@ -130,13 +131,33 @@ body {
      background-color: #5A6178;
   }
 }
+.swiper-wrapper{
+  &::before{
+    content:"";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    height: 160px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
+  }
+  &::after{
+    content:"";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    height: 300px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  }
+}
 .mySwiper{
   @media only screen and (max-width: 700px) {
     // display: none;
     
     background-color: #5A6178;
-    .swiper-wrapper{
-      display: none;
-    }
+
   }
 }
