--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,7 @@
 .content{
   transition: .5s transform;
   height: 400px;
-  width: 600px;
+  width: min-content;
   transition-timing-function:cubic-bezier(.88,-0.68,.17,1.48);
   /* display: flex;
   flex-direction: column;
@@ -40,9 +40,12 @@
   transform: translateY(100%);
 }
 .content h1{
+  font-family: 'Electrofied';
   font-size: 90px;
   font-weight: 500;
-
+  span{
+    font-size: 130px;
+  }
 }
 .content p{
   font-size: 26px;
