--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,7 +28,7 @@
   left: 120px;
   z-index: 2;
   @media only screen and (max-width: 700px) {
-    height: 150px;
+    // height: 150px;
     right: 50px;
     top: 50%;
     transform: translateY(-50%);
@@ -95,7 +95,7 @@
 }
 @media only screen and (max-width: 700px) {
   .content{
-    height: 150px;
+    // height: 150px;
     
   }
   .content h1{
@@ -126,6 +126,6 @@
   
   
   @media only screen and (max-width: 700px) {
-    display: none;
+    // display: none;
   }
 }
