--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,6 +29,7 @@ body {
   color: #fff;
   font-family: 'Be Vietnam Pro', -apple-system, BlinkMacSystemFont, Segoe UI,
 		Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
+    -webkit-tap-highlight-color: transparent;
 }
 *{
   margin: 0;
@@ -123,7 +124,7 @@ body {
 .mobile{
   display: none;
   @media only screen and (max-width: 700px) {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     height: 100vh;
