--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -27,9 +27,14 @@
   bottom: 50px;
   left: 120px;
   z-index: 2;
+  @media only screen and (max-width: 1200px) {
+    bottom: 150px;
+    left: 60px;
+  }
   @media only screen and (max-width: 700px) {
     // height: 150px;
-    right: 50px;
+    right: 20px;
+    left: 20px;
     top: 50%;
     transform: translateY(-50%);
   }
@@ -46,10 +51,25 @@
   span{
     font-size: 130px;
   }
+  @media only screen and (max-width: 1200px) {
+    font-size: 70px;
+  }
+  @media only screen and (max-width: 700px) {
+    font-size: 50px;
+    span{
+      font-size: 80px;
+    }
+  }
 }
 .content p{
   font-size: 26px;
   font-weight: 500;
+  @media only screen and (max-width: 1200px) {
+    font-size: 20px;
+  }
+  @media only screen and (max-width: 700px) {
+    font-size: 16px;
+  }
 }
 .button{
   height: 53px;
@@ -80,29 +100,11 @@
   margin-top: 40px;
   margin-left: 120px;
 }
-@media only screen and (max-width: 1200px) {
-  .wrapperContent{
-    bottom: 150px;
-    left: 60px;
-  }
-  .content{
-    width: 100%;
-    /* height: 500px; */
-  }
-  .content h1{
-    font-size: 50px;
-  }
-}
+
 @media only screen and (max-width: 700px) {
   .content{
     // height: 150px;
     
-  }
-  .content h1{
-    font-size: 50px;
-  }
-  .content p{
-    font-size: 14px;
   }
   .logo{
     /* width: 225.5px; */
