--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -16,6 +16,9 @@
   /* display: flex;
   flex-direction: column;
   justify-content: center; */
+  @media only screen and (max-width: 700px) {
+    width: 100%;
+  }
 }
 .content .down{
   transform: translateY(100%);
