--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -18,6 +18,7 @@
   justify-content: center; */
   @media only screen and (max-width: 700px) {
     width: 100%;
+    height: 150px;
   }
 }
 .content .down{
@@ -35,7 +36,7 @@
     left: 60px;
   }
   @media only screen and (max-width: 700px) {
-    // height: 150px;
+    height: 150px;
     right: 20px;
     left: 20px;
     top: 50%;
@@ -58,7 +59,7 @@
     font-size: 70px;
   }
   @media only screen and (max-width: 700px) {
-    font-size: 50px;
+    font-size: 40px;
     span{
       font-size: 80px;
     }
