--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -106,6 +106,7 @@ body {
   .mySwiper .swiper-pagination{
     margin-left: 120px;
     width: 100% !important;
+    bottom: 60px !important;
   }
 }
 .absolute{
