--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -39,8 +39,9 @@
     height: 150px;
     right: 20px;
     left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+    bottom: 20%;
+    // top: 50%;
+    // transform: translateY(-50%);
   }
   
 }
