--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -78,7 +78,11 @@ body {
         align-items: center !important;
         justify-content: center !important;
         border: 1px solid #fff;
+        box-sizing: border-box;
         margin-left: 32px !important;
+        @media only screen and (max-width: 900px) {
+          margin-left: 6px !important;
+        }
       }
 
       .swiper-pagination-bullet-active {
@@ -97,18 +101,20 @@ body {
   width: fit-content !important;
   transform: translateX( calc(-100% - 120px));
   z-index: 2;
-}
-@media only screen and (max-width: 700px) {
-  .swiper-pagination-bullet{
-    margin-left: 6px !important;
-    
-  }
-  .mySwiper .swiper-pagination{
-    margin-left: 120px;
-    width: 100% !important;
+  @media only screen and (min-width: 600px)and (max-width: 900px) {
     bottom: 60px !important;
   }
+  @media only screen and (max-width: 900px) {
+    margin-left: 120px;
+    width: 100% !important;
+  }
 }
+// @media only screen and (min-width: 900px)and (max-width: 1100px) {
+//   .mySwiper .swiper-pagination{
+//     bottom: 60px !important;
+//   }
+// }
+
 .absolute{
   position: absolute;
   inset: 0;
@@ -124,7 +130,7 @@ body {
 }
 .mobile{
   display: none;
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 900px) {
     display: none;
     justify-content: center;
     align-items: center;
@@ -153,13 +159,5 @@ body {
     z-index: 1;
     height: 300px;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-  }
-}
-.mySwiper{
-  @media only screen and (max-width: 700px) {
-    // display: none;
-    
-    background-color: #5A6178;
-
   }
 }
