--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,11 +1,12 @@
 .container {
   height: 100vh;
+  // height:  var(--window-height);
 }
 
 .item{
   background-size: cover;
   background-position: center; 
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
 }
 .content{
