--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,11 +12,11 @@
 	src: local('Electrofied Regular'),
 		url('../public/fonts/ElectrofiedRegular.ttf') format('truetype');
 }
-#app { height: 100% }
+// #app { min-height: 100vh}
 html,
 body {
   position: relative;
-  height: 100%;
+  // height: 100vh;
 
 }
 
@@ -101,12 +101,14 @@ body {
   width: fit-content !important;
   transform: translateX( calc(-100% - 120px));
   z-index: 2;
-  @media only screen and (min-width: 600px)and (max-width: 900px) {
-    bottom: 60px !important;
+  @media only screen and (min-width: 600px) and(max-width: 900px) {
+    bottom: 20px !important;
   }
-  @media only screen and (max-width: 900px) {
-    margin-left: 120px;
+
+  @media only screen and (max-width: 600px){
     width: 100% !important;
+    margin-left: 120px;
+    bottom: 30px !important;
   }
 }
 // @media only screen and (min-width: 900px)and (max-width: 1100px) {
