--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,12 +1,11 @@
 .container {
-  height: 100vh;
   // height:  var(--window-height);
 }
 
 .item{
   background-size: cover;
   background-position: center; 
-  // height: 100vh;
+  height: 100vh;
   width: 100%;
 }
 .content{
@@ -41,8 +40,11 @@
     right: 20px;
     left: 20px;
     bottom: 20%;
-    // top: 50%;
-    // transform: translateY(-50%);
+  }
+  @media only screen and (max-width: 600px){
+    right: 75px;
+    left: 24px;
+    bottom: 27px;
   }
   
 }
@@ -64,6 +66,12 @@
     font-size: 40px;
     span{
       font-size: 80px;
+    }
+  }
+  @media only screen and (max-width: 600px) {
+    font-size: 34px;
+    span{
+      font-size: 55px;
     }
   }
 }
