--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -83,6 +83,15 @@ body {
         @media only screen and (max-width: 900px) {
           margin-left: 6px !important;
         }
+        @media only screen and (max-width: 600px) {
+          width: 40px !important;
+          height: 40px !important;
+          img{
+            width: 28px;
+            height: 28px;
+          }
+        }
+          
       }
 
       .swiper-pagination-bullet-active {
@@ -109,6 +118,16 @@ body {
     width: 100% !important;
     margin-left: 120px;
     bottom: 30px !important;
+    display: grid;
+     justify-content: end;
+    grid-row-gap: 24px;
+    // justify-content: end;
+    padding-right: 24px;
+    bottom: 24px !important;
+    // height: min-content !important;
+    max-height: 50%;
+    min-height: min-content;
+
   }
 }
 // @media only screen and (min-width: 900px)and (max-width: 1100px) {
