--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -285,6 +285,15 @@ body {
 		background-color: #5a6178;
 	}
 }
+// .MuiPaper-root{
+// 	border: 1px solid #E9EAEF;
+// 	border-radius: 16px;
+// 	box-shadow: none;
+
+// 	.MuiList-root {
+// 		padding: 5px
+// 	}
+// }
 // .swiper-wrapper {
 // 	&::before {
 // 		content: '';
