--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -324,3 +324,19 @@ body {
 // 		);
 // 	}
 // }
+
+@keyframes animationArrow {
+  0%   {transform: translateX(0)}
+  25%  {transform: translateX(10px)}
+  50%  {transform: translateX(0)}
+	75%  {transform: translateX(10px)}
+  100% {transform: translateX(0)}
+}
+
+.animationArrow {
+  animation-name: animationArrow;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
