add assets wallet

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -324,3 +324,10 @@ body {
 // 		);
 // 	}
 // }
+
+.MuiTooltip-tooltip{
+	padding: 8px 9.5px;
+  border-radius: 16px;
+  background: rgba(49, 55, 62, 0.8);
+	min-width: 177px;
+}
