--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -340,9 +340,13 @@ body {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }		
-.MuiTooltip-tooltip{
-	padding: 8px 9.5px;
-  border-radius: 16px;
-  background: rgba(49, 55, 62, 0.8);
-	min-width: 177px;
+.tooltip{
+	&--assets{
+		.MuiTooltip-tooltip{
+			padding: 8px 9.5px;
+			border-radius: 16px;
+			background: rgba(49, 55, 62, 0.8);
+			min-width: 177px;
+		}
+	}
 }
