--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -167,7 +167,7 @@ body {
 .swiper-slide {
 	text-align: center;
 	font-size: 18px;
-	background: #fff;
+	// background: #fff;
 
 	/* Center slide text vertically */
 	display: -webkit-box;
