--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -358,12 +358,9 @@ body {
 	display: none;
 }
 .text_gadient_primary{
-	font-size: 56px;
-	text-transform: uppercase;
-	font-family: 'Electrofied';
-	font-style: italic;
+	font-size: 30px;
 	font-weight: 800;
-	  background: -webkit-linear-gradient(180deg, #FF8A50 2.08%, #FF6D24 66.9%);
+	  background: -webkit-linear-gradient(0deg, #FFCC77 2.08%, #FF6D24 66.9%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 	
