--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -423,5 +423,63 @@ text-fill-color: transparent;
 // }
 
 // .swiper-slide.swiper-slide-active {
-//   background-color: coral;
+
+// 		background-image: url('../public/assets/dark/neon-orange.png');
+// 		background-repeat: no-repeat;
+// 		background-position: center;
+// 		background-size: contain;
 // }
+
+/* From uiverse.io by @satyamchaudharydev */
+.button {
+
+	height: 46px;
+	
+
+	border-radius: 12px;
+	position: relative;
+	text-align: center;
+	border-radius: 0.45em;
+	//  font-family: "Arial";
+	transition: background 0.3s;
+}
+.text {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.button-wrapper,.text,.text2 {
+	overflow: hidden;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	color: #fff;
+}
+
+.text {
+ 	top: 0
+}
+
+.text,.text2 {
+ 	transition: top 0.5s;
+}
+
+.text2 {
+	color: #fff;
+	top: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.button:hover .text {
+ top: -100%;
+}
+
+.button:hover .text2 {
+ top: 0;
+}
+
+
