--- a/components/loadding/Loading.module.css
+++ b/components/loadding/Loading.module.css
@@ -72,7 +72,7 @@
 	position: fixed;
 	z-index: 1101;
 	inset: 0;
-	background-color: #1C1E29;
+	background-color: #000;
 }
 .none {
   display: none;
