--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -326,16 +326,16 @@ body {
 // }
 
 @keyframes animationArrow {
-  0%   {transform: translateX(0)}
-  25%  {transform: translateX(10px)}
-  50%  {transform: translateX(0)}
-	75%  {transform: translateX(10px)}
-  100% {transform: translateX(0)}
+  0%   {transform: translateY(0)}
+  25%  {transform: translateY(7px)}
+  50%  {transform: translateY(0)}
+	75%  {transform: translateY(7px)}
+  100% {transform: translateY(0)}
 }
 
 .animationArrow {
   animation-name: animationArrow;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-direction: alternate;
